--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure 数字孪生预览版文档
-summary: 了解如何使用 Azure 数字孪生来创建资产、环境和业务系统的数字表示形式，以构建针对现实世界进行建模的下一代 IoT 解决方案。
+summary: 据 Microsoft Build 2020 大会公布，正在准备 Azure 数字孪生服务的新款公共预览版。 你很快就将在此位置找到介绍新服务及其功能的完整文档。 你还可继续通过下面的链接访问第一版 Azure 数字孪生的相关文档。
 metadata:
   title: Azure 数字孪生预览版文档 - 教程和 API 参考 | Microsoft Docs
   description: 了解如何使用 Azure 数字孪生来连接人员、地点等，以及构建带有空间智能的 IoT 解决方案。
@@ -10,72 +10,16 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 02/12/2020
-  ms.openlocfilehash: 93bfe0db668e3aaa78e7f58b715490dfe26fbe7a
-  ms.sourcegitcommit: 1de57529ab349341447d77a0717f6ced5335074e
+  ms.openlocfilehash: c6822c319489eedf1ecdd7d1fddcd19456c35dd9
+  ms.sourcegitcommit: 24f31287b6a526e23ff5b5469113522d1ccd4467
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/09/2020
-  ms.locfileid: "84610026"
+  ms.lasthandoff: 06/12/2020
+  ms.locfileid: "84744011"
 landingContent:
-- title: 关于 Azure 数字孪生
+- title: Azure 数字孪生初版
   linkLists:
-  - linkListType: overview
-    links:
-    - text: Azure 数字孪生是什么？
-      url: overview.md
-- title: 教程入门
-  linkLists:
-  - linkListType: tutorial
-    links:
-    - text: 为客户端应用编写代码
-      url: tutorial-code.md
-  - linkListType: tutorial
-    links:
-    - text: 使用示例客户端应用了解基础知识
-      url: tutorial-command-line-app.md
-  - linkListType: tutorial
-    links:
-    - text: 连接端到端解决方案
-      url: tutorial-end-to-end.md
-- title: 了解
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: 自定义模式
-      url: concepts-models.md
-  - linkListType: concept
-    links:
-    - text: 数字孪生和孪生图
-      url: concepts-twins-graph.md
-  - linkListType: concept
-    links:
-    - text: 查询语言
-      url: concepts-query-language.md
-- title: 开发
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: 使用 Azure 数字孪生 CLI
-      url: how-to-use-cli.md
-  - linkListType: how-to-guide
-    links:
-    - text: 创建 Azure 数字孪生实例
-      url: how-to-set-up-instance.md
-  - linkListType: how-to-guide
-    links:
-    - text: 对客户端应用程序进行身份验证
-      url: how-to-authenticate-client.md
-- title: API 参考
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: 使用 Azure 数字孪生 API 和 SDK
-      url: how-to-use-apis-sdks.md
-  - linkListType: how-to-guide
-    links:
-    - text: 使用 AutoRest 创建自定义 SDK
-      url: how-to-create-custom-sdks.md
   - linkListType: reference
     links:
-    - text: REST API
-      url: https://docs.microsoft.com/rest/api/azure-digitaltwins/
+    - text: 早期版本文档：Azure 数字孪生
+      url: https://docs.microsoft.com/previous-versions/azure/digital-twins/about-digital-twins
