--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -256,12 +256,10 @@
           href: limit-egress-traffic.md
         - name: 实现 Azure Active Directory 集成
           items:
-            - name: 集成 Azure AD（预览版）
+            - name: AKS 托管的 AAD（预览版）
               href: managed-aad.md
             - name: 使用 Azure CLI
               href: azure-ad-integration-cli.md
-            - name: 使用 Azure 门户
-              href: azure-ad-integration.md
         - name: 将 Kubernetes RBAC 用于 Azure AD 集成
           href: azure-ad-rbac.md
           maintainContext: true
