--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -95,6 +95,8 @@
           href: batch-management-dotnet.md
         - name: 成本分析和预算
           href: budget.md
+        - name: 对 Batch 帐户使用专用终结点
+          href: private-connectivity.md
     - name: 使用 Azure AD 进行身份验证
       items:
         - name: 将 Azure AD 与 Batch 服务配合使用
