--- a/articles/compliance/index.yml
+++ b/articles/compliance/index.yml
@@ -14,17 +14,20 @@ metadata:
   ms.author: terrylan
   manager: rkarlin
   ms.date: 05/06/2020
-  ms.openlocfilehash: 6ce314c514369c44957687f9a1aa8e93e8e55d26
-  ms.sourcegitcommit: 493b27fbfd7917c3823a1e4c313d07331d1b732f
+  ms.openlocfilehash: f3016c224e1c4177766e611c3b0f15ab464936e5
+  ms.sourcegitcommit: c4ad4ba9c9aaed81dfab9ca2cc744930abd91298
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/21/2020
-  ms.locfileid: "83743290"
+  ms.lasthandoff: 06/12/2020
+  ms.locfileid: "84737217"
 conceptualContent:
   title: 合规性产品
   items:
   - title: Global
     links:
+    - url: ../governance/policy/concepts/regulatory-compliance.md
+      itemType: concept
+      text: Azure Policy 法规符合性（预览）
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-cis-benchmark
       itemType: concept
       text: CI 基准
@@ -345,20 +348,28 @@ additionalContent:
         url: https://docs.microsoft.com/microsoft-365/compliance/gdpr-dpia-azure
     - title: 符合性蓝图
       links:
+      - text: Azure 安全基准
+        url: ../governance/blueprints/samples/azure-security-benchmark.md
+      - text: 加拿大联邦 PBMM
+        url: ../governance/blueprints/samples/canada-federal-pbmm/index.md
       - text: CI 基准
-        url: ../governance/blueprints/samples/cis-azure-1.1.0/index.md
-      - text: FedRAMP Moderate
+        url: ../governance/blueprints/samples/cis-azure-1-1-0.md
+      - text: FedRAMP 中等
         url: ../governance/blueprints/samples/fedramp-m/index.md
+      - text: FedRAMP 高
+        url: ../governance/blueprints/samples/fedramp-h/index.md
       - text: HIPAA HITRUST
         url: ../governance/blueprints/samples/hipaa-hitrust/index.md
       - text: IRS 1075
         url: ../governance/blueprints/samples/irs-1075/index.md
       - text: ISO 27001
         url: ../governance/blueprints/samples/iso27001/index.md
-      - text: NIST SP 800-53
-        url: ../governance/blueprints/samples/nist-sp-800-53-rev4/index.md
-      - text: PCI DSS v3.2.1
+      - text: NIST SP 800-53 R4
+        url: ../governance/blueprints/samples/nist-sp-800-53-r4.md
+      - text: PCI-DSS v3.2.1
         url: ../governance/blueprints/samples/pci-dss-3.2.1/index.md
+      - text: SWIFT CSP-CSCF v2020
+        url: ../governance/blueprints/samples/swift-2020/index.md
       - text: UK NHS 和 UK OFFICIAL (G-Cloud)
         url: ../governance/blueprints/samples/ukofficial/index.md
     - title: 国家/地区隐私和符合性指南
