--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -408,6 +408,8 @@
               href: ./partner-center-portal/commercial-marketplace-lead-management-instructions-salesforce.md
         - name: 市场计量服务
           items:
+            - name: 异常情况检测服务
+              href: ./partner-center-portal/anomaly-detection-service-for-metered-billing.md
             - name: 身份验证策略
               href: ./partner-center-portal/marketplace-metering-service-authentication.md
             - name: Azure 市场计量服务 API
