--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -15,6 +15,8 @@
           href: quickstart-create-server-database-azure-cli.md
         - name: 创建 DB - Azure CLI up 命令
           href: quickstart-create-server-up-azure-cli.md
+        - name: 创建 DB - Azure PowerShell
+          href: quickstart-create-postgresql-server-database-using-azure-powershell.md
         - name: 创建 DB - ARM 模板
           href: quickstart-create-postgresql-server-database-using-arm-template.md
           displayName: deploy azure resource manager template
@@ -48,6 +50,8 @@
               href: tutorial-design-database-using-azure-portal.md
             - name: Azure CLI
               href: tutorial-design-database-using-azure-cli.md
+            - name: Azure PowerShell
+              href: tutorial-design-database-using-powershell.md
         - name: 2 - 设计 Web 应用 - Python
           href: ../app-service/containers/tutorial-python-postgresql-app.md
           maintainContext: true
@@ -227,6 +231,8 @@
               href: howto-restore-server-portal.md
             - name: Azure CLI
               href: howto-restore-server-cli.md
+            - name: Azure PowerShell
+              href: howto-restore-server-powershell.md
         - name: 迁移数据库
           items:
             - name: 转储和还原
@@ -245,12 +251,16 @@
               href: howto-configure-server-parameters-using-portal.md
             - name: Azure CLI
               href: howto-configure-server-parameters-using-cli.md
+            - name: Azure PowerShell
+              href: howto-configure-server-parameters-using-powershell.md
         - name: 自动增长存储
           items:
             - name: Azure 门户
               href: howto-auto-grow-storage-portal.md
             - name: Azure CLI
               href: howto-auto-grow-storage-cli.md
+            - name: Azure PowerShell
+              href: howto-auto-grow-storage-powershell.md
         - name: 访问日志
           items:
             - name: Azure 门户
@@ -297,6 +307,8 @@
               href: howto-restart-server-portal.md
             - name: Azure CLI
               href: howto-restart-server-cli.md
+            - name: Azure PowerShell
+              href: howto-restart-server-powershell.md
         - name: 拒绝公用网络访问
           items:
             - name: Azure 门户
@@ -307,6 +319,8 @@
               href: howto-read-replicas-portal.md
             - name: 使用 Azure CLI、REST API 管理只读副本
               href: howto-read-replicas-cli.md
+            - name: 管理只读副本 - Azure PowerShell
+              href: howto-read-replicas-powershell.md
     - name: 超大规模 (Citus)
       items:
         - name: 创建用户
