--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -849,7 +849,7 @@
     - name: 运行应用程序
       items:
         - name: Cloud Foundry
-          href: 'https://docs.microsoft.com/en-us/azure/cloudfoundry/'
+          href: 'https://docs.microsoft.com/azure/cloudfoundry/'
         - name: Cassandra
           href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/n-tier/n-tier-cassandra?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json'
         - name: OpenShift
