--- a/articles/openshift/toc.yml
+++ b/articles/openshift/toc.yml
@@ -70,7 +70,7 @@
 - name: 参考
   items:
     - name: Azure Red Hat OpenShift CLI
-      href: /cli/azure/openshift
+      href: /cli/azure/aro
     - name: Azure Red Hat OpenShift REST API
       href: /rest/api/openshift
 - name: 资源
