--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -140,7 +140,7 @@
           items:
             - name: 诊断和审核日志
               href: container-registry-diagnostics-audit-logs.md
-            - name: 使用 Azure Policy 审核符合性（预览版）
+            - name: 使用 Azure Policy 审核符合性
               href: container-registry-azure-policy.md
         - name: 疑难解答
           expanded: false
