--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -66,6 +66,8 @@
   items:
     - name: Authenticate
       items:
+        - name: 对 Key Vault 进行身份验证
+          href: authentication.md
         - name: 使用应用服务托管标识
           href: managed-identity.md
         - name: 使用访问控制策略
@@ -123,7 +125,7 @@
     - name: 常见参数和标头
       href: common-parameters-and-headers.md
     - name: Azure PowerShell
-      href: '/powershell/module/az.keyvault/?view=azps-1.2.0#key_vault'
+      href: /powershell/module/az.keyvault/?view=azps-1.2.0#key_vault
     - name: Azure CLI
       href: /cli/azure/keyvault
     - name: .NET
