--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -27,6 +27,8 @@
       href: roles.md
     - name: 高级多阶段攻击检测
       href: fusion.md
+    - name: 跨工作区和租户扩展 Azure Sentinel
+      href: extend-sentinel-across-workspaces-tenants.md
 - name: 操作指南
   items:
     - name: 连接数据源
@@ -84,8 +86,6 @@
               href: connect-syslog.md
             - name: Zimperium Mobile Threat Defense
               href: connect-zimperium-mtd.md
-            - name: 使用 Logstash
-              href: connect-logstash.md
             - name: 基于 CEF 的解决方案
               href: connect-common-event-format.md
               items:
