--- a/articles/lab-services/index.yml
+++ b/articles/lab-services/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
-title: Azure 开发测试实验室文档
-summary: 了解如何使用 Azure 开发测试实验室为云中的团队或学生快速设置开发、测试、编程马拉松或教室实验室。
+title: Azure 实验室服务文档
+summary: 了解如何使用 Azure 实验室服务为云中的团队或学生快速设置开发、测试、编程马拉松或教室实验室。
 metadata:
-  title: Azure 开发测试实验室文档
-  description: 了解如何使用 Azure 开发测试实验室为云中的团队或学生快速设置开发、测试、编程马拉松或教室实验室。
+  title: Azure 实验室服务文档
+  description: 了解如何使用 Azure 实验室服务为云中的团队或学生快速设置开发、测试、编程马拉松或教室实验室。
   services: lab-services
   ms.service: lab-services
   ms.subservice: 
@@ -12,78 +12,68 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 09/26/2019
-  ms.openlocfilehash: 1cfb86a37068d4cd928081446e6bf9ad381bbd86
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: b5ca864504ccc0110636860c0c5d0cecc13adc50
+  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "72790953"
+  ms.lasthandoff: 06/17/2020
+  ms.locfileid: "84882846"
 landingContent:
-- title: 入门
+- title: 综合概述
   linkLists:
   - linkListType: overview
     links:
-    - text: 关于开发测试实验室
-      url: devtest-lab-overview.md
-    - text: 关于开发测试实验室和实验室服务
-      url: lab-services-overview.md
+    - text: 关于实验室服务和开发测试实验室
+      url: ../devtest-labs/lab-services-overview.md?toc=%2fazure%2fevent-grid%2fclassroom-labs%2ftoc.json
+    - text: 关于教室实验室
+      url: classroom-labs-overview.md
   - linkListType: concept
     links:
-    - text: 开发测试实验室概念
-      url: devtest-lab-concepts.md
-    - text: 热门方案
-      url: devtest-lab-guidance-get-started.md
+    - text: 教室实验室概念
+      url: classroom-labs-concepts.md
+- title: 实验室帐户
+  linkLists:
   - linkListType: tutorial
     links:
-    - text: 设置实验室
-      url: tutorial-create-custom-lab.md
-    - text: 访问实验室
-      url: tutorial-use-custom-lab.md
-- title: 项目
-  linkLists:
+    - text: 设置实验室帐户
+      url: tutorial-setup-lab-account.md
   - linkListType: how-to-guide
     links:
-    - text: 向 VM 添加项目
-      url: add-artifact-vm.md
-    - text: 创建自定义项目
-      url: devtest-lab-artifact-author.md
-    - text: 指定必需的项目
-      url: devtest-lab-mandatory-artifacts.md
-    - text: 排查项目失败问题
-      url: devtest-lab-troubleshoot-artifact-failure.md
-- title: 环境
+    - text: 创建和管理实验室帐户
+      url: how-to-manage-lab-accounts.md
+    - text: 配置实验室帐户
+      url: how-to-configure-lab-accounts.md
+- title: 设置教室实验室
   linkLists:
+  - linkListType: tutorial
+    links:
+    - text: 设置教室实验室
+      url: tutorial-setup-classroom-lab.md
   - linkListType: how-to-guide
     links:
-    - text: 配置和使用公共环境
-      url: devtest-lab-configure-use-public-environments.md
-    - text: 创建环境
-      url: devtest-lab-create-environment-from-arm.md
-    - text: 使用“平台即服务”服务
-      url: use-paas-services.md
-    - text: 连接到实验室的虚拟网络
-      url: connect-environment-lab-virtual-network.md
-    - text: 排查环境故障
-      url: troubleshoot-vm-environment-creation-failures.md
+    - text: 创建和管理教室实验室
+      url: how-to-manage-lab-accounts.md
+    - text: 设置、自定义并发布模板
+      url: how-to-create-manage-template.md
+    - text: 设置和管理虚拟机池
+      url: how-to-set-virtual-machine-passwords.md
+    - text: 添加和管理实验室用户
+      url: how-to-configure-student-usage.md
+    - text: 创建并管理计划
+      url: how-to-create-schedules.md
+- title: 使用教室实验室
+  linkLists:
+  - linkListType: tutorial
+    links:
+    - text: 访问教室实验室
+      url: tutorial-connect-virtual-machine-classroom-lab.md
+  - linkListType: how-to-guide
+    links:
+    - text: 对 Linux VM 使用远程桌面连接
+      url: how-to-use-remote-desktop-linux-student.md
 - title: 浏览参考内容
   linkLists:
   - linkListType: reference
     links:
-    - text: Azure CLI
-      url: /cli/azure/lab
-    - text: PowerShell
-      url: /powershell/module/az.devtestlabs/#devtest_labs
     - text: REST
-      url: /rest/api/dtl
-- title: 模板
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: 自定义映像与公式
-      url: devtest-lab-comparing-vm-base-image-types.md
-  - linkListType: how-to-guide
-    links:
-    - text: 从 VM 创建自定义映像
-      url: devtest-lab-create-custom-image-from-vm-using-portal.md
-    - text: 管理公式
-      url: devtest-lab-manage-formulas.md
+      url: /rest/api/labservices/
