--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: f99b1adb71e7c20809b18699cb29a46dfca1b755
-  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
+  ms.openlocfilehash: 17798401c9781ab567f50ef141f96cc885083b01
+  ms.sourcegitcommit: 9bfd94307c21d5a0c08fe675b566b1f67d0c642d
   ms.translationtype: HT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 06/17/2020
-  ms.locfileid: "84884283"
+  ms.locfileid: "84974953"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -55,6 +55,13 @@ productDirectory:
     - ai-machine-learning
     - web
     url: search/index.yml
+  - title: Azure 认知服务
+    summary: 添加智能 API 功能实现上下文交互
+    imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
+    azureCategories:
+    - featured
+    - ai-machine-learning
+    url: cognitive-services/index.yml
   - title: Azure Databricks
     summary: 基于 Apache Spark 的快速简单的协作分析平台
     imageSrc: https://static.docs.com/ui/media/product/azure/databricks.svg
@@ -135,13 +142,6 @@ productDirectory:
     azureCategories:
     - ai-machine-learning
     url: cognitive-services/bing-web-search/overview.md
-  - title: 认知服务
-    summary: 添加智能 API 功能实现上下文交互
-    imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
-    azureCategories:
-    - featured
-    - ai-machine-learning
-    url: cognitive-services/index.yml
   - title: 计算机视觉
     summary: 从图像中提取可操作信息
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
