--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -422,7 +422,7 @@
     - name: Microsoft Q&A 问题页面
       href: 'https://docs.microsoft.com/answers/topics/azure-backup.html'
     - name: 定价计算器
-      href: 'https://azure.microsoft.com/pricing/calculator/'
+      href: azure-backup-pricing.md
     - name: 服务更新
       href: 'https://azure.microsoft.com/updates/?product=backup'
     - name: 视频
